--- a/src/components/CompositeBar/Item/Item.scss
+++ b/src/components/CompositeBar/Item/Item.scss
@@ -6,6 +6,12 @@ $block: '.#{variables.$ns}composite-bar-item';
     $class: &;
     --gn-composite-bar-item-action-size: 36px;
 
+    --_--item-background-color-hover: var(--g-color-base-simple-hover);
+    --_--item-selected-background-color-active: var(--g-color-base-selection);
+    --_--item-general-icon-color: var(--g-color-text-primary);
+    --_--item-icon-color: var(--g-color-text-misc);
+    --_--item-text-color: var(--g-color-text-primary);
+
     display: flex;
     width: 100%;
     height: 100%;
@@ -13,15 +19,15 @@ $block: '.#{variables.$ns}composite-bar-item';
     cursor: pointer;
 
     &__icon {
-        color: var(--gn-aside-header-menu-item-icon-color);
+        color: var(--gn-color-item-icon, var(--_--item-icon-color));
 
         .#{variables.$ns}footer-item &,
         .#{variables.$ns}composite-bar-highlighted-item & {
-            color: var(--gn-aside-header-footer-item-icon-color);
+            color: var(--gn-color-item-icon-general, var(--_--item-general-icon-color));
         }
 
         .#{variables.$ns}composite-bar_subheader & {
-            color: var(--gn-aside-header-subheader-item-icon-color);
+            color: var(--gn-color-item-icon-general, var(--_--item-general-icon-color));
         }
     }
 
@@ -43,6 +49,8 @@ $block: '.#{variables.$ns}composite-bar-item';
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
+
+        color: var(--gn-color-item-text, var(--_--item-text-color));
     }
 
     &__title-adornment {
@@ -65,7 +73,7 @@ $block: '.#{variables.$ns}composite-bar-item';
     &__menu-divider {
         margin: 0 8px;
         width: 100%;
-        border-top: 1px solid var(--g-color-line-generic);
+        border-top: 1px solid var(--gn-color-line-horizontal, --_--horizontal-divider-line-color);
         cursor: default;
     }
 
@@ -141,13 +149,19 @@ $block: '.#{variables.$ns}composite-bar-item';
     &:not(&_compact) {
         &#{$class}_current {
             &#{$class}_type_regular {
-                background-color: var(--g-color-base-selection);
+                background-color: var(
+                    --gn-color-item-background-selected,
+                    var(--_--item-selected-background-color-active)
+                );
             }
         }
 
         &:not(#{$class}_current):hover {
             &#{$class}_type_regular {
-                background-color: var(--g-color-base-simple-hover);
+                background-color: var(
+                    --gn-color-item-background-hover,
+                    var(--_--item-background-color-hover)
+                );
             }
         }
     }
@@ -163,8 +177,14 @@ $block: '.#{variables.$ns}composite-bar-item';
                 top: 50%;
                 left: 50%;
                 z-index: -1;
-                width: var(--gn-aside-header-item-icon-background-size);
-                height: var(--gn-aside-header-item-icon-background-size);
+                width: var(
+                    --gn-aside-header-item-icon-background-size,
+                    var(--_--item-icon-background-size)
+                );
+                height: var(
+                    --gn-aside-header-item-icon-background-size,
+                    var(--_--item-icon-background-size)
+                );
                 margin-top: -19px;
                 margin-left: -19px;
                 border-radius: 7px;
@@ -185,7 +205,10 @@ $block: '.#{variables.$ns}composite-bar-item';
                     @include item-bg();
 
                     &::before {
-                        background-color: var(--g-color-base-selection);
+                        background-color: var(
+                            --gn-color-item-background-selected,
+                            var(--_--item-selected-background-color-active)
+                        );
                     }
                 }
             }
@@ -197,7 +220,10 @@ $block: '.#{variables.$ns}composite-bar-item';
                     @include item-bg();
 
                     &::before {
-                        background-color: var(--g-color-base-simple-hover);
+                        background-color: var(
+                            --gn-color-item-background-hover,
+                            var(--_--item-background-color-hover)
+                        );
                     }
                 }
             }
