feat(AsideHeader): use inner css vars (#182)
* feat(AsideHeader): use inner css vars

* feat(AsideHeader)!: support themization

* fix: panel width, update Readme

* fix(Highlighted): fix CSS vars

--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -2,34 +2,18 @@
 
 $block: '.#{variables.$ns}aside-header';
 
-.g-root {
-    --gn-aside-header-background-color: var(--g-color-base-warning-light);
-    --gn-aside-header-collapse-button-divider-line-color: var(
-        --gn-aside-header-subheader-divider-line-color
-    );
-    --gn-aside-header-menu-item-icon-color: var(--g-color-text-misc);
-    --gn-aside-header-footer-item-icon-color: var(--g-color-text-primary);
-    --gn-aside-header-subheader-item-icon-color: var(--g-color-text-primary);
-    --gn-aside-header-item-icon-background-size: 38px;
-
-    --gn-aside-top-panel-height: 0px;
-}
-
-.g-root_theme_light,
-.g-root_theme_light-hc {
-    --gn-aside-header-divider-line-color: var(--g-color-line-generic);
-    --gn-aside-header-subheader-divider-line-color: var(--g-color-line-generic);
-}
-
-.g-root_theme_dark,
-.g-root_theme_dark-hc {
-    --gn-aside-header-divider-line-color: var(--g-color-line-generic-solid);
-    --gn-aside-header-subheader-divider-line-color: var(--g-color-line-generic-solid);
-}
-
 #{$block} {
     $class: &;
     --gn-aside-header-min-width: 56px;
+
+    --_--item-icon-background-size: 38px;
+    --_--background-color: var(--g-color-base-background);
+    --_--decoration-collapsed-background-color: var(--g-color-base-warning-light);
+    --_--decoration-expanded-background-color: var(--g-color-base-warning-light);
+    --_--vertical-divider-line-color: var(--g-color-line-generic);
+    --_--horizontal-divider-line-color: var(--g-color-line-generic);
+
+    --_--top-panel-height: 0px;
 
     height: 100%;
     width: 100%;
@@ -38,16 +22,16 @@ $block: '.#{variables.$ns}aside-header';
 
     &__aside {
         position: sticky;
-        top: var(--gn-aside-top-panel-height);
+        top: var(--gn-aside-top-panel-height, var(--_--top-panel-height));
         left: 0;
         height: 100vh;
         width: inherit;
         display: flex;
         flex-direction: column;
-        background-color: var(--g-color-base-background);
+        background-color: var(--gn-color-background, var(--_--background-color));
         z-index: 100;
-        max-height: calc(100vh - var(--gn-aside-top-panel-height));
-        margin-top: var(--gn-aside-top-panel-height);
+        max-height: calc(100vh - var(--gn-aside-top-panel-height, var(--_--top-panel-height)));
+        margin-top: var(--gn-aside-top-panel-height, var(--_--top-panel-height));
 
         box-sizing: border-box;
 
@@ -59,7 +43,7 @@ $block: '.#{variables.$ns}aside-header';
             width: 1px;
             height: 100%;
             content: '';
-            background-color: var(--gn-aside-header-divider-line-color);
+            background-color: var(--gn-color-line-vertical, var(--_--vertical-divider-line-color));
         }
 
         &-popup-anchor {
@@ -91,7 +75,8 @@ $block: '.#{variables.$ns}aside-header';
         &-content_with-decoration {
             background: linear-gradient(
                 180deg,
-                var(--gn-aside-header-background-color) calc(var(--gradient-height) * 0.33),
+                var(--gn-color-accent-expanded, var(--_--decoration-expanded-background-color))
+                    calc(var(--gradient-height) * 0.33),
                 transparent calc(var(--gradient-height) * 0.88)
             );
         }
@@ -130,7 +115,10 @@ $block: '.#{variables.$ns}aside-header';
             left: 0;
             z-index: -2;
             display: none;
-            color: var(--gn-aside-header-background-color);
+            color: var(
+                --gn-color-accent-collapsed,
+                var(--_--decoration-collapsed-background-color)
+            );
         }
 
         &_with-decoration::before {
@@ -142,7 +130,10 @@ $block: '.#{variables.$ns}aside-header';
             width: 100%;
             height: calc(100% - var(--gn-aside-header-header-divider-height));
             content: '';
-            background-color: var(--gn-aside-header-background-color);
+            background-color: var(
+                --gn-color-accent-collapsed,
+                var(--_--decoration-collapsed-background-color)
+            );
         }
 
         &::after {
@@ -153,7 +144,10 @@ $block: '.#{variables.$ns}aside-header';
             width: 100%;
             height: 1px;
             content: '';
-            background-color: var(--gn-aside-header-subheader-divider-line-color);
+            background-color: var(
+                --gn-color-line-horizontal,
+                var(--_--horizontal-divider-line-color)
+            );
         }
     }
 
@@ -191,9 +185,9 @@ $block: '.#{variables.$ns}aside-header';
         left: 0;
         right: 0;
         bottom: 0;
-        top: var(--gn-aside-top-panel-height);
+        top: var(--gn-aside-top-panel-height, var(--_--top-panel-height));
         overflow: auto;
-        max-height: calc(100vh - var(--gn-aside-top-panel-height));
+        max-height: calc(100vh - var(--gn-aside-top-panel-height, var(--_--top-panel-height)));
     }
 
     &__panel {
@@ -210,7 +204,7 @@ $block: '.#{variables.$ns}aside-header';
 
     &__pane-top-divider {
         height: 1px;
-        background-color: var(--gn-aside-header-divider-line-color);
+        background-color: var(--gn-color-line-horizontal, var(--_--horizontal-divider-line-color));
         margin-top: -1px;
     }
 
@@ -237,7 +231,7 @@ $block: '.#{variables.$ns}aside-header';
     &__content {
         width: calc(100% - var(--gn-aside-header-size));
         z-index: 95;
-        margin-top: var(--gn-aside-top-panel-height);
+        margin-top: var(--gn-aside-top-panel-height, var(--_--top-panel-height));
     }
 
     &__collapse-button {
@@ -256,7 +250,8 @@ $block: '.#{variables.$ns}aside-header';
         flex: none;
         width: 100%;
         height: 20px;
-        border-top: 1px solid var(--gn-aside-header-collapse-button-divider-line-color);
+        border-top: 1px solid
+            var(--gn-color-line-horizontal, var(--_--horizontal-divider-line-color));
         margin-top: auto;
 
         &:not(&_compact) {
