chore: update eslint, prettier

--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -48,10 +48,7 @@ $block: '.#{variables.$ns}aside-header';
 
         &-popup-anchor {
             position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
+            inset: 0;
             z-index: 1;
         }
 
@@ -182,10 +179,7 @@ $block: '.#{variables.$ns}aside-header';
     &__panels {
         z-index: 98;
         position: fixed;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        top: var(--gn-aside-top-panel-height, var(--_--top-panel-height));
+        inset: var(--gn-aside-top-panel-height, var(--_--top-panel-height)) 0 0;
         overflow: auto;
         max-height: calc(100vh - var(--gn-aside-top-panel-height, var(--_--top-panel-height)));
     }
