--- a/src/components/Settings/Settings.scss
+++ b/src/components/Settings/Settings.scss
@@ -1,4 +1,5 @@
 @use '../variables';
+
 @import '../../../styles/mixins';
 
 $block: '.#{variables.$ns}settings';
@@ -117,14 +118,12 @@ $block: '.#{variables.$ns}settings';
     }
 
     &__loader {
-        align-self: center;
-        justify-self: center;
+        place-self: center;
     }
 
     &__not-found {
         display: grid;
-        align-items: center;
-        justify-items: center;
+        place-items: center;
         height: 100%;
     }
 
