--- a/src/components/HotkeysPanel/HotkeysPanel.scss
+++ b/src/components/HotkeysPanel/HotkeysPanel.scss
@@ -1,14 +1,12 @@
 @use '../variables';
+
 @import '../../../styles/mixins';
 
 $block: '.#{variables.$ns}hotkeys-panel';
 
 #{$block} {
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    inset: 0;
 
     --hotkeys-panel-width: 400px;
     --hotkeys-panel-vertical-padding: 18px;
