--- a/src/components/MobileHeader/BurgerMenu/BurgerCompositeBar/BurgerCompositeBar.scss
+++ b/src/components/MobileHeader/BurgerMenu/BurgerCompositeBar/BurgerCompositeBar.scss
@@ -61,11 +61,11 @@ $block: '.#{variables.$ns}burger-composite-bar';
     }
 
     &__root-menu-item {
-        &.yc-list__item_selected {
+        &.g-list__item_selected {
             background-color: var(--g-color-base-selection);
         }
 
-        &:not(.yc-list__item_selected).yc-list__item_active {
+        &:not(.g-list__item_selected).g-list__item_active {
             background: none;
         }
     }
