--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -229,10 +229,10 @@ $block: '.#{variables.$ns}aside-header';
     }
 
     &__collapse-button {
-        --yc-button-background-color-hover: transparent;
+        --g-button-background-color-hover: transparent;
 
         // TODO: remove temporary fix for expand button
-        & > .yc-button__text {
+        & > .g-button__text {
             display: flex;
             align-items: center;
             justify-content: center;
