--- a/src/components/CompositeBar/Item/Item.scss
+++ b/src/components/CompositeBar/Item/Item.scss
@@ -111,16 +111,16 @@ $block: '.#{variables.$ns}composite-bar-item';
         height: var(--gn-composite-bar-item-action-size);
         margin: 0 10px 8px;
         background: var(--g-color-base-float);
-        box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.03), 0px 5px 6px rgba(0, 0, 0, 0.12);
+        box-shadow:
+            0px 0px 0px 1px rgba(0, 0, 0, 0.03),
+            0px 5px 6px rgba(0, 0, 0, 0.12);
         border-radius: var(--gn-composite-bar-item-action-size);
-        transition: transform 0.1s ease-out, background-color 0.15s linear;
+        transition:
+            transform 0.1s ease-out,
+            background-color 0.15s linear;
 
-        &:focus {
+        &:focus-visible {
             box-shadow: 0 0 0 2px var(--g-color-line-misc);
-        }
-
-        &:focus:not(:focus-visible) {
-            box-shadow: none;
         }
 
         &:hover {
