--- a/src/components/MobileLogo/MobileLogo.scss
+++ b/src/components/MobileLogo/MobileLogo.scss
@@ -1,7 +1,7 @@
-@use '../../variables';
-@import '../../../../styles/mixins';
+@use '../variables';
+@import '../../../styles/mixins';
 
-$block: '.#{variables.$ns}mobile-header-logo';
+$block: '.#{variables.$ns}mobile-logo';
 
 #{$block} {
     display: flex;
