--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -170,6 +170,20 @@ $block: '.#{variables.$ns}aside-header';
         }
     }
 
+    &__logo-button-wrapper {
+        width: var(--gn-aside-header-min-width);
+    }
+
+    &__logo-button[class] {
+        &,
+        .g-button__icon {
+            height: var(
+                --gn-aside-header-item-icon-background-size,
+                var(--_--item-icon-background-size)
+            );
+        }
+    }
+
     &__menu-items {
         flex-grow: 1;
     }
