--- a/src/components/MobileLogo/MobileLogo.scss
+++ b/src/components/MobileLogo/MobileLogo.scss
@@ -9,7 +9,7 @@ $block: '.#{variables.$ns}mobile-logo';
     align-items: center;
     overflow: hidden;
 
-    gap: 8px;
+    gap: var(--g-spacing-2);
 
     &:is(a) {
         &,
